# yerba

./: .dockerignore  .gitignore  .npmrc  .prettierrc.js  Cargo.toml  README.md  fly.toml  package.json  pnpm-lock.yaml  temp.json  tsconfig.json  turbo.json
.github/workflows/: fly.yml
app/: .eslintrc.js  package.json  tsconfig.json  vite.config.ts
app/config/eslint/: base.js  eslint.js
app/config/ts/: base.tsconfig.json
app/config/vite/: index.ts  relativeAliasResolver.ts
app/src/: App.tsx  env.d.ts  index.html  index.tsx  patches.ts
app/src/hooks/: index.ts
app/src/main/: index.tsx
app/src/main/space/: Layout.tsx  SpaceMain.tsx  empty-state.tsx  index.tsx
app/src/main/space/SpaceHeader/: SpaceHeader.tsx
app/src/main/space/chat/: ChatInputBar.tsx  index.tsx
app/src/main/space/files/: index.tsx  useUploader.tsx  util.ts
app/src/main/space/preview/: index.tsx
app/src/main/top/: Layout.tsx  index.tsx
app/src/main/top/TopBar/: AuthModal.tsx  index.tsx
app/src/main/top/auth/: auth-updater.tsx  no-user.tsx
app/src/main/user/: Layout.tsx  SpacesList.tsx  SpacesProvider.tsx  index.tsx  user-test.tsx
app/src/rspc/: authStore.tsx  core.ts  index.ts  rspc.tsx  useAppContent.tsx
app/src/ui/: colors.ts  common.tsx  icons.tsx  index.ts  modal.tsx  styled.d.ts  styles.ts  text.tsx  theme.tsx  utils.tsx
app/src/ui/FloatingBar/: index.tsx
app/src/ui/buttons/: index.tsx
app/src/ui/modal/: index.ts  input.tsx  modal.tsx
app/src/util/: ErrorFallback.tsx
crates/prisma/: Cargo.toml
demo/vector_db/index/: id_to_uuid_da8bdd84-e1b9-4159-9258-a80b7339e91e.pkl  index_metadata_da8bdd84-e1b9-4159-9258-a80b7339e91e.pkl
server/: Cargo.toml  package.json
server/demo-space/vector_db/: chroma-collections.parquet
server/demo-space/vector_db/index/: uuid_to_id_da8bdd84-e1b9-4159-9258-a80b7339e91e.pkl
server/docker/: Dockerfile  entrypoint.sh
server/p-server/: pyproject.toml
server/p-server/yerba/: main.py
server/prisma/: schema.prisma
server/python/: pyproject.toml  requirements.txt  run.py
server/python-server/: pyproject.toml  requirements.txt
server/python-server/yerba/: chain.py  main.py
server/python/server/: server.py
server/src/: custom_uri.rs  lib.rs  main.rs  utils.rs
server/src/api/: files.rs  messages.rs  mod.rs  spaces.rs  tasks.rs  users.rs
server/src/api/utils/: invalidate.rs  mod.rs  space.rs  user.rs
server/src/space/: manager.rs  mod.rs  space.rs
server/src/tasks/: dispatcher.rs  mod.rs
server/src/tasks/learn_file/: mod.rs
server/src/tasks/reply/: mod.rs
server/src/tasks/upload_file/: mod.rs
server/src/user/: manager.rs  mod.rs  user.rs
web/src/rspc/: core.ts
