[tool.poetry]
name = "yerba"
version = "0.1.0"
description = "The description of the package"

license = "MIT"

authors = ["Luke Mann <luke@mann.xyz>"]

repository = "https://github.com/lukemann/yerba"


[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.9,<4.0"

attrs = "^23.1.0"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
requests = "^2.31.0"
structlog = "^23.1.0"
typing-extensions = "^4.6.3"
langchain = "^0.0.209"
chromadb = "^0.3.26"
urllib3 = "^2.0.3"
pymupdf = "^1.22.5"
python-dotenv = "^1.0.0"
unstructured = "^0.7.7"
extract-msg = "^0.41.5"
tabulate = "^0.9.0"
pandoc = "^2.3"
pypandoc = "^1.11"
tqdm = "^4.65.0"
openai = "0.27.8"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]


black = "^23.3.0"
build = "^0.10.0"
httpx = "^0.24.1"
hypothesis = "^6.79.2"
mypy = "^1.4.0"
numpy = "^1.25.0"
pillow = "^9.5.0"
responses = "^0.23.1"
ruff = "^0.0.274"

[tool.poetry.scripts]
my-script = "main:app"
